Fix image sizing, remove sample content, update header color

--- a/themes/investmuse/layouts/_default/baseof.html
+++ b/themes/investmuse/layouts/_default/baseof.html
@@ -18,7 +18,7 @@
             border: 1px solid #00B8A9; 
         }
         .header { 
-            background: #1a3d3e; 
+            background: #00B8A9; 
             color: white; 
             padding: 1rem; 
             margin: -2rem -2rem 2rem -2rem; 
