Reduce image width to 60% and add content padding

--- a/themes/investmuse/layouts/_default/single.html
+++ b/themes/investmuse/layouts/_default/single.html
@@ -9,7 +9,7 @@
 
 <style>
 .content img {
-    max-width: 70%;
+    max-width: 60%;
     width: auto;
     height: auto;
     display: block;
@@ -19,13 +19,14 @@
 }
 
 .content p img {
-    max-width: 80%;
+    max-width: 60%;
 }
 
 .content {
     line-height: 1.6;
     max-width: 100%;
     overflow-x: hidden;
+    padding: 0 1rem;
 }
 </style>
 {{ end }}
