Fix image width to stay within content bounds

--- a/themes/investmuse/layouts/_default/single.html
+++ b/themes/investmuse/layouts/_default/single.html
@@ -59,12 +59,8 @@
 
 /* Mobile responsive */
 @media (max-width: 790px) {
-    .content img {
-        width: calc(100vw - 40px) !important;
-    }
-    
-    .content em {
-        max-width: calc(100vw - 40px) !important;
+    .content {
+        padding: 0 15px;
     }
 }
 </style>
